# noxstatus

./: .gitignore  ChangeLog.md  README.md  default.nix  derivation.nix  flake.nix  nixpkgs.nix  noxstatus.cabal  overlay.nix  package.yaml  shell.nix
app/: ClientSecret.hs  Images.hs  Main.hs
src/: Lib.hs
