cabal-version: 2.4

name:           noxstatus
version:        0.1.2.0
description:    Please see the README on GitHub at <https://github.com/meck/noxstatus#readme>
homepage:       https://github.com/meck/noxstatus#readme
author:         Johan Eklund
maintainer:     johan@meck.se
copyright:      Johan Eklund
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-doc-files:
    README.md
    ChangeLog.md

common shared-properties
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5
    ghc-options:
        -Wall -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wcompat -Widentities
        -Wredundant-constraints -fhide-source-paths -Wmissing-export-lists
        -Wpartial-fields

library
  import:
      shared-properties
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      aeson
    , async
    , bytestring
    , http-client
    , http-conduit
    , http-types
    , time

executable noxstatus
  import:
      shared-properties
  main-is: Main.hs
  other-modules:
      Images
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      aeson
    , boxes
    , directory
    , http-conduit
    , noxstatus
    , optparse-applicative
    , time

test-suite noxstatus-test
  import:
      shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      noxstatus
